Příprava HTML nastavení

--- a/admin/static/html/submodules/_headline.html
+++ b/admin/static/html/submodules/_headline.html
@@ -8,5 +8,4 @@ $nested => další komponenty
 
 */
 ?>
-
-<?=$data[0]?>
+<h<?=$attributes['level']?> class="a-headline a-headline<?=$attributes['class']?>" id="<?=$id?>"><?=$data[0]?></h<?=$attributes['level']?>>
