--- a/admin/static/html/submodules/_socials_card.html
+++ b/admin/static/html/submodules/_socials_card.html
@@ -9,7 +9,7 @@ $nested => další komponenty
 */
 ?>
 
-<div class="c-carousel_card c-carousel_card<?=$attributes['class']?> c-carousel_card--hidden">
+<div class="c-carousel_card c-carousel_card<?=$attributes['class']?> c-carousel_card--hidden" id='<?=$id?>'>
     <div class="c-carousel_card__cl">
         <p class="c-carousel_card__text"><?=$data[0]?></p>
         
