--- a/admin/static/html/submodules/_input.html
+++ b/admin/static/html/submodules/_input.html
@@ -8,4 +8,4 @@ $nested => další komponenty
 
 */
 ?>
-<input name="<?=$id?>" id="<?=$id?>" class="a-input a-input<?=$attributes['class']?>" <?=$attributes['type']?> <?=$attributes['value']?> <?=$attributes['placeholder']?>>
+<input name="<?=$id?>" id="<?=$id?>" class="a-input a-input<?=$attributes['class']?>" <?=$attributes['type+']?> <?=$attributes['value']?> <?=$attributes['placeholder']?>>
