Úprava headline komponenty

--- a/admin/static/html/submodules/_headline.html
+++ b/admin/static/html/submodules/_headline.html
@@ -8,4 +8,6 @@ $nested => další komponenty
 
 */
 ?>
-<h<?=$attributes['level']?> class="a-headline a-headline<?=$attributes['class']?>" id="<?=$id?>"><?=$data[0]?></h<?=$attributes['level']?>>
+<div class="a-headline a-headline<?=$attributes['class']?>" id="<?=$id?>">
+    <h<?=$attributes['level']?> class="a-headline__self"><?=$data[0]?></h<?=$attributes['level']?>>
+</div>
